# games

./: Makefile  pyproject.toml
games/: cli.py  engine.py  utils.py
games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
games/scripts/: calc.py  even.py  games.py  gcd.py  hello.py  prime.py  progression.py
