[tool.poetry]
name = "games"
version = "0.1.0"
description = ""
authors = ["Юлия Самсонова <samsonovajulias@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
